# half-matrix

./: Cargo.toml  README.md
src/: lib.rs
